<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GetItDone</string>
    <string name="action_settings">Settings</string>
    <string name="deadline_names">Task</string>
    <string name="deadline_notes">Notes</string>
    <string name="deadline_tags">Notes</string>
    <string name="deadline_time">Notes</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Save</string>
    <string name="add_button">Save</string>
    <string name="name">Pick</string>
    <string name="action_search">Search</string>

</resources>